--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solo-contacts",
+  "name": "connectease",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-clipboard": "^4.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
